Fix spacing for recipeIngredientInput

--- a/app/styles/_recipeIngredientInput.scss
+++ b/app/styles/_recipeIngredientInput.scss
@@ -4,8 +4,8 @@
   .btn-weak {
     font-size: 21px;
     line-height: 1;
-    padding-top: 5px;
-    padding-bottom: 6px;
+    padding-top: 4px;
+    padding-bottom: 5px;
   }
 }
 
